исправления, связанные с мероприятими с профилем "мероприятие с командным участием"
