# internal/controller/event/constants.go
@@ -15,13 +15,14 @@ const (
 	routeEventUnparticipate    = "/events/event/:id/unparticipate"
 	routeEventCheckParticipate = "/events/event/:id/participate/check"
 
-	routeTeamBase         = "/events/team"
-	routeTeam             = "/events/team/:id"
-	routeGetTeams         = "/events/team/:id/teams"
-	routeTeamJoin         = "/events/team/:id/join/:teamId"
-	routeTeamLeave        = "/events/team/:id/leave/:teamId"
-	routeTeamByID         = "/events/team/:id/:teamId"
-	routeTeamNotification = "/events/team/:id/:teamId/notification"
+	routeTeamBase          = "/events/team"
+	routeTeam              = "/events/team/:id"
+	routeGetTeams          = "/events/team/:id/teams"
+	routeTeamJoin          = "/events/team/:id/join/:teamId"
+	routeTeamLeave         = "/events/team/:id/leave/:teamId"
+	routeTeamByID          = "/events/team/:id/:teamId"
+	routeTeamNotification  = "/events/team/:id/:teamId/notification"
+	routeTeamChangeCaptain = "/events/team/:id/:teamId/captain/:userId"
 
 	routeTest                = "/events/test"
 	routeTestByID            = "/events/test/:id"
