# internal/dto/team_dto/event_dto.go
@@ -9,58 +9,63 @@ import (
 )
 
 type TeamEventDto struct {
-	ID                uuid.UUID         `json:"id"`
-	Name              string            `json:"name"`
-	Description       *string           `json:"description"`
-	Cover             *string           `json:"cover"`
-	Status            string            `json:"status"`
-	StartsAt          time.Time         `json:"starts_at"`
-	EndsAt            *time.Time        `json:"ends_at"`
-	TeamsConstraint   int               `json:"teams_constraint"`
-	TeamsCapMin       *int              `json:"teams_cap_min"`
-	TeamsCapMax       *int              `json:"teams_cap_max"`
-	Lat               *float64          `json:"lat"`
-	Lon               *float64          `json:"lon"`
-	Address           *string           `json:"address"`
-	AdditionalAddress *string           `json:"additional_address"`
-	VkPostID          *int64            `json:"vk_post_id"`
-	Organizers        []dto.UserMiniDto `json:"organizers"`
+	ID                uuid.UUID           `json:"id"`
+	Name              string              `json:"name"`
+	Description       *string             `json:"description"`
+	Cover             *string             `json:"cover"`
+	Status            string              `json:"status"`
+	StartsAt          time.Time           `json:"starts_at"`
+	EndsAt            *time.Time          `json:"ends_at"`
+	TeamsConstraint   int                 `json:"teams_constraint"`
+	TeamsCapMin       *int                `json:"teams_cap_min"`
+	TeamsCapMax       *int                `json:"teams_cap_max"`
+	Lat               *float64            `json:"lat"`
+	Lon               *float64            `json:"lon"`
+	Address           *string             `json:"address"`
+	AdditionalAddress *string             `json:"additional_address"`
+	VkPostID          *int64              `json:"vk_post_id"`
+	AvailableRoles    []string            `json:"available_roles"`
+	Organizers        []dto.UserMiniDto   `json:"organizers"`
+	Attachments       []dto.AttachmentDto `json:"attachments"`
 }
 
 type CreateTeamEventDto struct {
-	Name              string        `json:"name"`
-	Description       *string       `json:"description"`
-	Cover             *string       `json:"cover"`
-	Status            string        `json:"status"`
-	StartsAt          dto.FlexTime  `json:"starts_at"`
-	EndsAt            *dto.FlexTime `json:"ends_at"`
-	TeamsConstraint   int           `json:"teams_constraint"`
-	TeamsCapMin       *int          `json:"teams_cap_min"`
-	TeamsCapMax       *int          `json:"teams_cap_max"`
-	Lat               *float64      `json:"lat"`
-	Lon               *float64      `json:"lon"`
-	Address           *string       `json:"address"`
-	AdditionalAddress *string       `json:"additional_address"`
-	VkPostID          *int64        `json:"vk_post_id"`
-	Organizers        []uuid.UUID   `json:"organizers"`
-	Attachments       []string      `json:"attachments"`
+	Name              string              `json:"name"`
+	Description       *string             `json:"description"`
+	Cover             *string             `json:"cover"`
+	Status            string              `json:"status"`
+	StartsAt          dto.FlexTime        `json:"starts_at"`
+	EndsAt            *dto.FlexTime       `json:"ends_at"`
+	TeamsConstraint   int                 `json:"teams_constraint"`
+	TeamsCapMin       *int                `json:"teams_cap_min"`
+	TeamsCapMax       *int                `json:"teams_cap_max"`
+	Lat               *float64            `json:"lat"`
+	Lon               *float64            `json:"lon"`
+	Address           *string             `json:"address"`
+	AdditionalAddress *string             `json:"additional_address"`
+	VkPostID          *int64              `json:"vk_post_id"`
+	AvailableRoles    []string            `json:"available_roles"`
+	Organizers        []uuid.UUID         `json:"organizers"`
+	Attachments       []dto.AttachmentDto `json:"attachments"`
 }
 
 type UpdateTeamEventDto struct {
-	Name              *string       `json:"name"`
-	Description       *string       `json:"description"`
-	Cover             *string       `json:"cover"`
-	Status            *string       `json:"status"`
-	StartsAt          *dto.FlexTime `json:"starts_at"`
-	EndsAt            *dto.FlexTime `json:"ends_at"`
-	TeamsConstraint   *int          `json:"teams_constraint"`
-	TeamsCapMin       *int          `json:"teams_cap_min"`
-	TeamsCapMax       *int          `json:"teams_cap_max"`
-	Lat               *float64      `json:"lat"`
-	Lon               *float64      `json:"lon"`
-	Address           *string       `json:"address"`
-	AdditionalAddress *string       `json:"additional_address"`
-	VkPostID          *int64        `json:"vk_post_id"`
+	Name              *string              `json:"name"`
+	Description       *string              `json:"description"`
+	Cover             *string              `json:"cover"`
+	Status            *string              `json:"status"`
+	StartsAt          *dto.FlexTime        `json:"starts_at"`
+	EndsAt            *dto.FlexTime        `json:"ends_at"`
+	TeamsConstraint   *int                 `json:"teams_constraint"`
+	TeamsCapMin       *int                 `json:"teams_cap_min"`
+	TeamsCapMax       *int                 `json:"teams_cap_max"`
+	Lat               *float64             `json:"lat"`
+	Lon               *float64             `json:"lon"`
+	Address           *string              `json:"address"`
+	AdditionalAddress *string              `json:"additional_address"`
+	VkPostID          *int64               `json:"vk_post_id"`
+	AvailableRoles    []string             `json:"available_roles"`
+	Attachments       *[]dto.AttachmentDto `json:"attachments"`
 }
 
 type DeleteTeamEventDto struct {
